Add favicon and browser monitoring setup
- Update favicon reference to favicon.png in index.html
- Add puppeteer dependency for browser monitoring
- Add monitor script to package.json for testing deployed site
- Add .vercel to gitignore to exclude Vercel config files

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "monitor": "node monitor-browser.js"
   },
   "keywords": [
     "sp500",
@@ -52,7 +53,8 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.1.1",
+    "puppeteer": "^24.15.0"
   },
   "eslintConfig": {
     "extends": [
